# TransparentClock

./: CMakeLists.txt  README.md  TransparentClock.7z  main.cpp  main.qml  resources.qrc  systemtraymanager.cpp  systemtraymanager.h
Resources/: clock.rc  clock.xcf
